# exam-review-helper

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  Review - test_k.md  SKILL.md  config.yaml  requirements.txt  test_k.json  test_k_review.html
.github/workflows/: test.yml
evals/: evals.json
prompts/: system_merger.md  system_reader.md  system_reader_liberal_arts.md  system_reviser.md  system_verifier.md  system_verifier_liberal_arts.md
references/: common-failure-modes.md  html-template.md  multi-format-input.md  multi-pass-workflow.md
scripts/: chapter_selector.py  config.py  controller.py  extractors.py  generate_html.py  ocr_corrector.py  run_evals.py
skills/exam-review-helper/: SKILL.md  config.yaml  pyproject.toml  requirements.txt
skills/exam-review-helper/docs/: optimizations-explained.html
skills/exam-review-helper/evals/: evals.json
skills/exam-review-helper/prompts/: system_reader_liberal_arts.md  system_segment.md  system_verifier_liberal_arts.md
skills/exam-review-helper/references/: advanced-features.md  multi-pass-workflow.md
skills/exam-review-helper/scripts/: cache.py  config.py  controller.py  enhance_formulas.py  generate_html.py  ocr_corrector.py  run_pipeline.py
skills/exam-review-helper/test_data/: sample.docx  sample.md  sample_gbk.txt
skills/exam-review-helper/tests/: test_extractors.py  test_generate_html.py  test_run_evals.py
templates/: default.html
tests/: conftest.py  test_chapter_selector.py  test_p0_p1_features.py  test_pdf_regression.py
