[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "exam-review-helper"
version = "1.0.0"
description = "期末考试复习助手 - 将 PDF/Word/TXT/Markdown 教材浓缩为交互式 HTML 复习文档"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "exam-review-helper"}]

# 核心依赖（从 requirements.txt 迁移）
dependencies = [
    "docling>=2.10.0",
    "PyMuPDF>=1.23.0",
    "rapidocr-onnxruntime>=1.3.0",
    "markitdown[docx]>=0.1.6",
    "charset-normalizer>=3.4.0",
    "python-pptx>=1.0.0",
    "transformers>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
formula = [
    "pix2tex",  # 可选：公式 OCR
]

# 命令行入口
[project.scripts]
exam-review = "controller:main"

[tool.setuptools]
# scripts/ 目录作为包源
py-modules = ["controller", "extractors", "generate_html", "chapter_selector",
              "run_pipeline", "enhance_formulas", "ocr_corrector"]

[tool.setuptools.packages.find]
# 不用包结构，用 py-modules
where = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
